--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             {% endfor %}
         </div>
         <div class="opcoes">
-            <a href="signin" class="material-symbols-outlined">
+            <a href="/logout" class="material-symbols-outlined">
                 logout
             </a>
             <a onclick="MudarTema()" id="tema" class="material-symbols-outlined">
@@ -49,21 +49,21 @@
                 <p>{{tarefa.titulo}}</p>
             </div>
             <div id="Resources">
-                <div onclick="EditarFixada('Não','{{tarefa.id}}','0', '{{tarefa.titulo}}')" id="Edit" title="Editar Título">
+                <div onclick="EditarFixada('{{tarefa.id}}', '{{tarefa.titulo}}')" id="Edit" title="Editar Título">
                     <span class="material-symbols-outlined">edit</span>
                 </div>
                 <div onclick="DescricaoFixada('{{tarefa.titulo}}', '{{tarefa.data}}', '{{tarefa.descricao}}')" id="Info" title="Descrição e Data De Criação">
                     <span class="material-symbols-outlined">info</span>
                 </div>
-                <div onclick="DeletarFixada('Não', '{{tarefa.id}}', '0', '0')" id="Delete" title="Deletar Tarefa">
+                <div onclick="DeletarFixada('{{tarefa.id}}')" id="Delete" title="Deletar Tarefa">
                     <span class="material-symbols-outlined">delete</span>
                 </div>
                 {% if tarefa.status %}
-                <div onclick="CheckarFixada('Não', '{{tarefa.id}}', '0', '0')" id="Check" title="Checkar Tarefa" style="background-color: #19C37D;">
+                <div onclick="CheckarFixada('{{tarefa.id}}')" id="Check" title="Checkar Tarefa" style="background-color: #19C37D;">
                     <span class="material-symbols-outlined">check</span>
                 </div>
                 {% else %}
-                <div onclick="CheckarFixada('Não', '{{tarefa.id}}', '0', '0')" id="Check" title="Checkar Tarefa" style="background-color: #33373d85;">
+                <div onclick="CheckarFixada('{{tarefa.id}}')" id="Check" title="Checkar Tarefa" style="background-color: #33373d85;">
                     <span class="material-symbols-outlined">check</span>
                 </div>
                 {% endif %}
