Messages In Django
Usando Messages Do Django Para Tratamento de Erros Tanto no Login e Cadastro de Usuários e Mudanças Nas Views

--- a/static/css/account.css
+++ b/static/css/account.css
@@ -107,6 +107,12 @@ section#CandLogin {
     font-weight: 600;
 }
 
+/*Messages*/
+.messages {
+    color: red;
+    font-size: 0.8em;
+}
+
 @keyframes flutuar {
     0% {
         transform: translateY(0);
