--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,11 @@
                 <input type="text" name="username" placeholder="UserName" required minlength="8">
                 <input type="password" name="password" id="password" placeholder="PassWord" required minlength="8">
                 <input type="password" name="password2" id="password2" placeholder="Repeat PassWord" required minlength="8">
+                <div>
+                    {% for message in messages %}
+                    <h3 class="messages">{{message}}</h3>
+                    {% endfor %}
+                </div>
                 <a href="signin">I Have an Account</a>
                 <input id="submit" type="submit" value="Sign Up">
             </form>
