--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="menu" onmouseover="AtivarMenu()" onmouseout="DesativarMenu()">
             <span class="material-symbols-outlined">menu</span>
         </div>
@@ -70,6 +70,23 @@
             </div>
         </div>
         {% endfor %}
+        <div class="pagination">
+            <span class="step-links">
+                {% if tarefas.has_previous %}
+                    <a href="?page={{ tarefas.previous_page_number }}"><span class="material-symbols-outlined">chevron_left</span></a>
+                {% endif %}
+                {% if tarefas.number == 1 %}
+                <span class="current">
+                    <span class="current-page"></span>
+                </span>
+                {% else %}
+                <span class="current-page">{{tarefas.number}}</span>
+                {% endif %}
+                {% if tarefas.has_next %}
+                    <a href="?page={{ tarefas.next_page_number }}"><span class="material-symbols-outlined">chevron_right</span></a>
+                {% endif %}
+            </span>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
     <script src="../static/js/script.js"></script>
