--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -16,6 +16,7 @@
 
 @media screen and (min-width: 720px) and (max-width: 1920px) {
     section#CandLogin {
+        width: 50%;
         box-shadow: none;
     }
 }
