--- a/templates/list.html
+++ b/templates/list.html
@@ -70,11 +70,11 @@
                     <span class="material-symbols-outlined">delete</span>
                 </div>
                 {% if tarefa.status %}
-                <div onclick="CheckarTarefa('{{tarefa.id}}', '{{lista_id.id}}')" id="Check" title="Checkar Tarefa" style="background-color: #19C37D;">
+                <div onclick="CheckarTarefa('{{tarefa.id}}', '{{lista_id.id}}')" id="Check" title="Checkar Tarefa" style="background-color: #44B78B;">
                     <span class="material-symbols-outlined">check</span>
                 </div>
                 {% else %}
-                <div onclick="CheckarTarefa('{{tarefa.id}}', '{{lista_id.id}}')" id="Check" title="Checkar Tarefa" style="background-color: #33373d85;">
+                <div onclick="CheckarTarefa('{{tarefa.id}}', '{{lista_id.id}}')" id="Check" title="Checkar Tarefa" style="background-color: gainsboro;">
                     <span class="material-symbols-outlined">check</span>
                 </div>
                 {% endif %}
