--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ header {
 header p#logo {
     user-select: none;
     font: bold 1.5em sans-serif;
-    color: #33373D;
+    color: #121212;
 }
 
 /*Configuração do Recurso Menu*/
@@ -37,7 +37,7 @@ header p#logo {
 /*Ícone Menu*/
 .menu span {
     font-size: 1.5em;
-    color: #33373D;
+    color: #121212;
     user-select: none;
 }
 
@@ -49,7 +49,7 @@ header p#logo {
     gap: 20px;
     padding: 20px;
     position: absolute;
-    background-color: #33334F;
+    background-color: #121212;
     transform: translate(-200px, 30px);
     transition: 0.3s ease;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.5);
@@ -66,11 +66,6 @@ header p#logo {
     text-decoration: none;
 }
 
-/*ícone Delete*/
-.menu-close p span {
-    color: #991b1b;
-}
-
 /*Opções Como: Logout and DarkMode*/
 .opcoes {
     display: flex;
@@ -82,7 +77,7 @@ header p#logo {
 .opcoes a {
     cursor: pointer;
     font-size: 1.5em;
-    color: #33373D;
+    color: #121212;
     text-decoration: none;
     user-select: none;
 }
@@ -97,6 +92,7 @@ section {
     padding: 20px;
     width: 95%;
     margin: auto;
+    border-radius: 16px;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.5);
     position: relative;
 }
@@ -121,9 +117,9 @@ section {
     cursor: pointer;
     color: white;
     font: bold 1.2em sans-serif;
-    border-radius: 10px;
+    border-radius: 12px;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
-    background-color: #33334F;
+    background-color: #121212;
     transition: 0.3s ease;
     user-select: none;
 }
@@ -138,9 +134,9 @@ section {
     cursor: pointer;
     color: white;
     font: bold 1.2em sans-serif;
-    border-radius: 10px;
+    border-radius: 12px;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
-    background-color: #33334F;
+    background-color: #121212;
     transition: 0.3s ease;
     user-select: none;
 }
@@ -151,6 +147,7 @@ section {
     justify-content: space-between;
     padding: 10px;
     width: 100%;
+    border-radius: 16px;
     border-bottom: 1px solid;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
 }
@@ -178,11 +175,9 @@ section {
     justify-content: center;
     align-items: center;
     padding: 8px;
-
     border: 1px solid;
     border-radius: 50%;
-    background-color: #33334F;
-
+    background-color: #121212;
     cursor: pointer;
     color: white;
     transition: 0.3s ease;
